# zeal-cc

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  SCOPE.md  STATUS.md  TESTING.md  autoexec.zs  headless.conf  test.py  test.sh  test.zs
.deploy/: index.js
.deploy/eeprom/: autoexec.zs  welcome.txt
.deploy/romdisk/: zshell
.github/workflows/: build.yml
docs/: ARRAYS.md  AST_FORMAT.md  CALLING_CONVENTION.md  LIMITATIONS.md  README.md  SEMANTIC.md  SPLIT_COMPILER_TASKS.md  USAGE.md
include/: ast_format.h  ast_io.h  ast_reader.h  cc_compat.h  codegen.h  codegen_strings.h  common.h  lexer.h  parser.h  semantic.h  symbol.h  target.h  z80_ast.h
runtime/: crt0.asm  math_16.asm  math_8.asm  putchar.asm  runtime.asm  zeal8bit.asm
specs/001-z80-c-compiler/: tasks.md
src/: codegen.c  codegen_strings.c  common.c  lexer.c  main.c  parser.c  symbol.c  version.h  version.h.in
src/cc/: main.c
src/codegen/: codegen.c  codegen_strings.c  main.c  z80.c
src/common/: ast_io.c  ast_read.c  ast_reader.c  ast_write.c  common.c  symbol.c  symbol_table.c  type.c
src/common/ast_reader/: ast_read_node.c  ast_reader_begin_program.c  ast_reader_destroy.c  ast_reader_init.c  ast_reader_internal.h  ast_reader_load_strings.c  ast_reader_read_decl.c  ast_reader_read_root.c  ast_reader_read_type_info.c  ast_reader_skip_node.c  ast_reader_skip_tag.c  ast_reader_string.c  ast_tree_destroy.c
src/parser/: lexer.c  main.c  main_parse.c  parser.c
src/semantic/: main.c  semantic.c
src/tools/: ast_dump.c
tests/: array.c  array.zs  array_char.c  array_ptr.c  assign.c  assign.zs  bitwise.c  bitwise.zs  break.c  break.zs  char.c  char.zs  char_ptr.c  comp.c  comp.zs  compares.c  compares.zs  do_while.c  do_while.zs  expr.zs  for.zs  global.c  global.zs  goto.c  goto.zs  if.c  if.zs  long.c  math.c  math.zs  mod.c  params.c  params.zs  pointer.c  pointer.zs  return16.c  return16.zs  semantic.c  semantic.zs  signs.c  (+34 more)
